Fixed project display that was skewed during overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -100,7 +100,8 @@ html {
     flex-grow: 1;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
     overflow: scroll;
 }
 
